
typedef unsigned long size_t;
typedef long intptr_t; typedef unsigned long uintptr_t;
typedef long scalar_t__;

typedef int bool;
 int LockName ;
 int Locked ;
 int unlink (int ) ;

void
unlockmbox()
{
 if (!Locked)
  return;
 (void) unlink(LockName);
 Locked = 0;
}
